2009-12-15  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (collect-notes): Establish new abort restart ("Abort
	Compilation"); if an error is signaled in EVAL-WHEN, or during
	macroexpansion -- assuming the backend DTRT --, invoking this
	restart will result in the normal compilation failure behaviour,
	including correct reporting of the offending toplevel form.

	* swank-sbcl.lisp (handle-notification-condition): Use
	`real-condition' here.
	(handle-file-compiler-termination): As a result, not needed anymore.
	(call-with-compilation-hooks): Also signal information about
	normal errors.

2009-12-14  Stas Boukarev  <stassats@gmail.com>

	* doc/slime.texi (ASDF): Document new commands.

2009-12-12  Matthias Koeppe  <mkoeppe@math.ucdavis.edu>

	* doc/slime.texi (Presentations): Add an example that illustrates
	quoting necessary with presentations that are lists.

2009-12-11  Stas Boukarev  <stassats@gmail.com>

	* swank-allegro.lisp: Use new function `make-error-location'.
	(find-fspec-location): Handle errors.
	Patch by Tobias C. Rittweiler.

2009-12-11  Tobias C. Rittweiler <tcr@freebits.de>

	Add `M-x slime-toggle-debug-on-swank-error'.

	In "Debug on SWANK error" mode, errors which are normally caught
	to not annoy the user, will now drop into the debugger.

	Additionally, the backend won't do any backtrace magic so you'll
	see the full backtrace with all its glory details. (SBCL only so
	far.)

	* slime.el (slime-toggle-debug-on-swank-error): New.

	* swank.lisp (toggle-debug-on-swank-error): New slimefun.
	(debug-on-swank-error): New function. SETFable.
	(invoke-default-debugger): Use CALL-WITH-DEBUGGER-HOOK so we're
	trapped into the native debugger on SBCL (previously we weren't
	due to SB-EXT:*INVOKE-DEBUGGER-HOOK*.)

	* swank.lisp: Rename SWANK-ERROR to SWANK-PROTOCOL-ERROR.

2009-12-11  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-sbcl.lisp (call-with-debugger-hook): Oops, removed the
	binding for *DEBUGGER-HOOK*. Fix that.